# AnvilCraft-Panel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev_log.md  extract_arguments.py  inspect_regs.py  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
reports/: items.json
scripts/: translator.py
src/: app.css
src-tauri/: Cargo.toml  check_final.txt  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  version.rs
src-tauri/src/commands/: dev.rs  instance.rs  java.rs  mod.rs  server.rs  system.rs  version.rs  versions.rs
src-tauri/src/lib/data/: arguments.json  command_tree.json
src-tauri/src/lib/data/minecraft/: manifest.json
src-tauri/src/lib/data/minecraft/v1_20_6/: items.json
src/lib/: i18n.ts
src/lib/components/: BetaWatermark.svelte  NavigationRail.svelte  ToastContainer.svelte  TopBar.svelte
src/lib/components/console/: ConsoleView.svelte
src/lib/components/modals/: AddonInstallModal.svelte  ConfirmModal.svelte  CreateInstanceModal.svelte  IconPicker.svelte  UpdateModal.svelte
src/lib/components/settings/: InstanceSettings.svelte
src/lib/components/views/: AddonsView.svelte  AppearanceSettings.svelte  DevDashboard.svelte  Home.svelte  InstanceDetail.svelte  (+4 more)
src/lib/config/: features.ts
src/lib/data/: arguments.json  command_tree.json  commands.json  icons.json
src/lib/i18n/: es.json
src/lib/locales/: en.json  es.json
src/lib/runes/: store.svelte.ts  toast.svelte.ts
src/routes/: +layout.svelte  +page.svelte
