[package]
name = "anvil-craft"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anvil_craft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
slug = "0.1.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
sysinfo = "0.37.2"
zip = "7.0.0"
fs_extra = "1.3.0"
tauri-plugin-updater = "2.10.1"

[profile.release]
panic = "abort" # Reduce binary size
codegen-units = 1 # Better optimizations
lto = true # Link Time Optimization
opt-level = "s" # Optimize for size
